Splash and filters
Readded splash screen and added filter dropdown on map screen, along
with reset view button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="brewery_logo">brewery logo</string>
     <string name="title_activity_splash">SplashActivity</string>
 
+    <string name="reset">Reset</string>
+
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main_blah">MainBlah</string>
