--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">What\'s Pouring?</string>
-    <string name="title_activity_maps">What\'s Pouring?</string>
+    <string name="app_name">What\'s Pouring</string>
+    <string name="title_activity_maps">What\'s Pouring</string>
     <string name="brewery_logo">brewery logo</string>
     <string name="title_activity_splash">SplashActivity</string>
 
